--- a/branches/branch-playground/TODO.html
+++ b/branches/branch-playground/TODO.html
@@ -1,4 +1,5 @@
 $Id$
+<html><head></head><body><pre><b>
 
 0.9.6 Todo:
 
@@ -8,7 +9,8 @@ $Id$
 		- in Mainwindow
 			* Onlinebar (vertical drawing)
 			* weathertoolbar (is on top and transparent, anyhow, and crashing when move attempt)
-	* OSD is black in win32
+	<s style="color:green;">* OSD is black in win32</s>
+	* OSD fading
 	* Buttons, no Text on it (soundplugin f.e.)
 	* Datepicker does not work and is not displayed right (popup) at QCursor::pos())
 	* Floatys are not as long as in 0.9.5
@@ -17,7 +19,7 @@ $Id$
 
 - Sound-plugin:
 	* no startup sound is played
-	
+
 - Config-Dialog steals access to other windows (f.e. InterfaceWindow, MainWindow...)
 
 
@@ -28,3 +30,5 @@ TODO list for sim-im 1.0.0:
 1) fix all bugs ;-)
 2) implement nice things
 3) make all a little bit nicer
+
+</b></pre></body></html>
