--- a/branches/branch-playground/TODO.html
+++ b/branches/branch-playground/TODO.html
@@ -1,5 +1,5 @@
 $Id$
-<html><head></head><body><pre><b>
+<html><head></head><body><pre><b><style type="text/css"> s{color:green;} font{color:red} </style>
 
 0.9.6 Todo:
 
@@ -9,8 +9,8 @@ $Id$
 		- in Mainwindow
 			* Onlinebar (vertical drawing)
 			* weathertoolbar (is on top and transparent, anyhow, and crashing when move attempt)
-	<s style="color:green;">* OSD is black in win32</s>
-	* OSD fading
+	<s>* OSD is black in win32</s> <font>Fixed by Noragen</font>
+	<s>* OSD fading in win32</s> <font>Fixed by Noragen</font>
 	* Buttons, no Text on it (soundplugin f.e.)
 	* Datepicker does not work and is not displayed right (popup) at QCursor::pos())
 	* Floatys are not as long as in 0.9.5
