--- a/branches/branch-playground/TODO.html
+++ b/branches/branch-playground/TODO.html
@@ -11,18 +11,19 @@ $Id$
 			* weathertoolbar (is on top and transparent, anyhow, and crashing when move attempt)
 	<s>* OSD is black in win32</s> <font>Fixed by Noragen</font>
 	<s>* OSD fading in win32</s> <font>Fixed by Noragen</font>
-	* Buttons, no Text on it (soundplugin f.e.)
+	* Setup: Buttons, no Text on it (soundplugin f.e.)
 	* Datepicker does not work and is not displayed right (popup) at QCursor::pos())
 	* Floatys are not as long as in 0.9.5
-	* dragging files on Kontakt in contact list is not possible to send them via filetransfer, but works with floatys
+	* dragging files on contakt in contactlist is not possible to send them via filetransfer, but works with floatys
 	* sound-plugin event-tab: the path lines are not display right, also the play/browse buttons are shrinked ;)
+	* Container/History: no context-menu on right click
 
 - Sound-plugin:
 	* no startup sound is played
 
 - Config-Dialog steals access to other windows (f.e. InterfaceWindow, MainWindow...)
 
-
+<a href="http://sim-im.org/wiki/Developing">Sim-IM Developer Area</a> on Sim-IM.org
 
 
 TODO list for sim-im 1.0.0:
