--- a/branches/branch-playground/TODO.html
+++ b/branches/branch-playground/TODO.html
@@ -17,6 +17,7 @@ $Id$
 	* dragging files on contakt in contactlist is not possible to send them via filetransfer, but works with floatys
 	* sound-plugin event-tab: the path lines are not display right, also the play/browse buttons are shrinked ;)
 	* Container/History: no context-menu on right click
+	* Search/Add-Dialog broken. Crashing on open
 
 - Sound-plugin:
 	* no startup sound is played
