--- a/branches/branch-playground/TODO.html
+++ b/branches/branch-playground/TODO.html
@@ -8,7 +8,10 @@ $Id$
 		- Interfacebar
 		- in Mainwindow
 			* Onlinebar (vertical drawing)
-			* weathertoolbar (is on top and transparent, anyhow, and crashing when move attempt)
+			* weathertoolbar
+				- is on top (place is not saved)
+				<s>- transparent</s> <font>Fixed by Christian</font>
+				<s>- crashing when move attempt</s> <font>Fixed by Christian</font>
 	<s>* OSD is black in win32</s> <font>Fixed by Noragen</font>
 	<s>* OSD fading in win32</s> <font>Fixed by Noragen</font>
 	<s>* Search/Add-Dialog broken. Crashing on open</s> <font>Fixed by Christian</font>
