--- a/branches/branch-playground/TODO.html
+++ b/branches/branch-playground/TODO.html
@@ -7,11 +7,19 @@ $Id$
 	* Fix all toolbars:
 		- Interfacebar
 		- in Mainwindow
-			* Onlinebar (vertical drawing)
+			* Onlinebar
+				- Position Saving
+				- vertical Online Statustext drawing
+				- (vertical expanding of StatusButton where Statustext is displayed)
 			* weathertoolbar
+				- Position Saving
 				- is on top (place is not saved)
+				- Icons are not shown in Tooltip
+				- Message is not displayed
+				- Fetch Icons from Server, due to ©-Issues, remove static Icon-Files (note: backport to trunk)
 				<s>- transparent</s> <font>Fixed by Christian</font>
 				<s>- crashing when move attempt</s> <font>Fixed by Christian</font>
+
 	<s>* OSD is black in win32</s> <font>Fixed by Noragen</font>
 	<s>* OSD fading in win32</s> <font>Fixed by Noragen</font>
 	<s>* Search/Add-Dialog broken. Crashing on open</s> <font>Fixed by Christian</font>
@@ -32,7 +40,7 @@ $Id$
 - Filetransfer-Window steals access to other windows, too
 
 <a href="http://sim-im.org/wiki/Developing">Sim-IM Developer Area</a> on Sim-IM.org
-
+<hr/>
 
 TODO list for sim-im 1.0.0:
 
