--- a/branches/branch-playground/TODO.html
+++ b/branches/branch-playground/TODO.html
@@ -32,6 +32,7 @@ $Id$
 	* Search/Add-Dialog:
 		- Labels for Textfields are missing.
 		- Functiontest has to be done.
+	* Online-Tooltips of contact list are hanging sometimes, they don't disappear
 
 - Sound-plugin:
 	* no startup sound is played
