--- a/branches/branch-playground/TODO.html
+++ b/branches/branch-playground/TODO.html
@@ -13,7 +13,7 @@ $Id$
 				- (vertical expanding of StatusButton where Statustext is displayed)
 			* weathertoolbar
 				- Position Saving
-				- is on top (place is not saved)
+				- is on top (should be displayed at bottom)
 				- Icons are not shown in Tooltip
 				- Message is not displayed
 				- Fetch Icons from Server, due to ©-Issues, remove static Icon-Files (note: backport to trunk)
@@ -24,7 +24,7 @@ $Id$
 	<s>* OSD fading in win32</s> <font>Fixed by Noragen</font>
 	<s>* Search/Add-Dialog broken. Crashing on open</s> <font>Fixed by Christian</font>
 	* Setup: Buttons, no Text on it (soundplugin f.e.)
-	* Datepicker does not work and is not displayed right (popup) at QCursor::pos())
+	<s>* Datepicker does not work and is not displayed right (popup) at QCursor::pos())</s> <font>Fixed by Christian</font>
 	* Floatys are not as long as in 0.9.5
 	* dragging files on contakt in contactlist is not possible to send them via filetransfer, but works with floatys
 	* sound-plugin event-tab: the path lines are not display right, also the play/browse buttons are shrinked ;)
