--- a/branches/branch-playground/TODO.html
+++ b/branches/branch-playground/TODO.html
@@ -13,7 +13,7 @@ $Id$
 				- (vertical expanding of StatusButton where Statustext is displayed)
 			* weathertoolbar
 				- Position Saving
-				- is on top (should be displayed at bottom)
+				<s>- is on top (should be displayed at bottom)</s> <font>Fixed by Christian</font>
 				- Icons are not shown in Tooltip
 				- Message is not displayed
 				- Fetch Icons from Server, due to ©-Issues, remove static Icon-Files (note: backport to trunk)
