--- a/branches/branch-playground/TODO.html
+++ b/branches/branch-playground/TODO.html
@@ -9,8 +9,9 @@ $Id$
 		- in Mainwindow
 			* Onlinebar
 				- Position Saving
-				- vertical Online Statustext drawing
+				<s>- vertical Online Statustext drawing</s> <font>Fixed by Yury</font>
 				- (vertical expanding of StatusButton where Statustext is displayed)
+				- vertical OnlineToolbar: Width is much to big. Seems to the width from StatusButton.
 			* weathertoolbar
 				- Position Saving
 				<s>- is on top (should be displayed at bottom)</s> <font>Fixed by Christian</font>
