--- a/branches/branch-playground/TODO.html
+++ b/branches/branch-playground/TODO.html
@@ -10,7 +10,7 @@ $Id$
 			* Onlinebar
 				- Position Saving
 				<s>- vertical Online Statustext drawing</s> <font>Fixed by Yury</font>
-				- (vertical expanding of StatusButton where Statustext is displayed)
+				- vertical expanding of StatusButton where Statustext is displayed
 				- vertical OnlineToolbar: Width is much to big. Seems to the width from StatusButton.
 			* weathertoolbar
 				- Position Saving
@@ -40,6 +40,7 @@ $Id$
 
 - Config/Setup-Window steals access to other windows (f.e. no possible acces to InterfaceWindow, MainWindow.. then.)
 - Filetransfer-Window steals access to other windows, too
+- Search: broken
 
 <a href="http://sim-im.org/wiki/Developing">Sim-IM Developer Area</a> on Sim-IM.org
 <hr/>
