--- a/branches/branch-playground/TODO.html
+++ b/branches/branch-playground/TODO.html
@@ -5,7 +5,9 @@ $Id$
 
 - GUI-Problems:
 	* Fix all toolbars:
-		- Interfacebar
+		- Interfacetoolbar
+			- some Buttons are broken on the left (color button)
+			- some controls should be hidden as in 0.9.5 in toolbar, visible only the needed ones. (Restoration of the Toolbar/Container behavior)
 		- in Mainwindow
 			* Onlinebar
 				- Position Saving
@@ -20,6 +22,9 @@ $Id$
 				- Fetch Icons from Server, due to ©-Issues, remove static Icon-Files (note: backport to trunk)
 				<s>- transparent</s> <font>Fixed by Christian</font>
 				<s>- crashing when move attempt</s> <font>Fixed by Christian</font>
+		- HistoryToolbar:
+			- Searchbutton not displayed/messed up
+			- horizontal expanding of the controls does not work.
 
 	<s>* OSD is black in win32</s> <font>Fixed by Noragen</font>
 	<s>* OSD fading in win32</s> <font>Fixed by Noragen</font>
