--- a/branches/branch-playground/TODO.html
+++ b/branches/branch-playground/TODO.html
@@ -46,6 +46,7 @@ $Id$
 - Config/Setup-Window steals access to other windows (f.e. no possible acces to InterfaceWindow, MainWindow.. then.)
 - Filetransfer-Window steals access to other windows, too
 - Search: broken
+- Translation: broken
 
 <a href="http://sim-im.org/wiki/Developing">Sim-IM Developer Area</a> on Sim-IM.org
 <hr/>
