--- a/branches/branch-playground/TODO.html
+++ b/branches/branch-playground/TODO.html
@@ -5,6 +5,7 @@ $Id$
 
 - GUI-Problems:
 	* Fix all toolbars:
+		- Some Buttons don't have Highlight-Effect anymore
 		- Interfacetoolbar
 			- some Buttons are broken on the left (color button)
 			- some controls should be hidden as in 0.9.5 in toolbar, visible only the needed ones. (Restoration of the Toolbar/Container behavior)
