--- a/branches/branch-playground/TODO.html
+++ b/branches/branch-playground/TODO.html
@@ -3,6 +3,11 @@ $Id$
 
 0.9.6 Todo:
 
+
+
+- Config:
+	- On startup all seems initialized by 0.9.6, the 0.9.5-config gets broken due to this initialization
+
 - GUI-Problems:
 	* Fix all toolbars:
 		- Some Buttons don't have Highlight-Effect anymore
