--- a/branches/branch-playground/TODO.html
+++ b/branches/branch-playground/TODO.html
@@ -10,7 +10,8 @@ $Id$
 
 - GUI-Problems:
 	* Fix all toolbars:
-		- Some Buttons don't have Highlight-Effect anymore
+		- CToolButtons don't have Highlight-Effect anymore
+			* popup in at QCursor::pos() does not work
 		- Interfacetoolbars:
 			- Middle-toolbar:
 				- some Buttons are broken on the left (color button)
@@ -23,7 +24,7 @@ $Id$
 		- in Mainwindow
 			* Onlinebar
 				- Position Saving
-				- vertical OnlineToolbar: Width is much to big. Seems to the width from StatusButton.
+				<s>- vertical OnlineToolbar: Width is much to big. Seems to the width from StatusButton.</s> <font>Fixed by Denis</font>
 				<s>- vertical expanding of StatusButton where Statustext is displayed</s> <font>Fixed by Noragen</font>
 				<s>- vertical Online Statustext drawing</s> <font>Fixed by Yury</font>
 			* weathertoolbar
