--- a/branches/branch-playground/TODO.html
+++ b/branches/branch-playground/TODO.html
@@ -28,13 +28,13 @@ $Id$
 				<s>- vertical expanding of StatusButton where Statustext is displayed</s> <font>Fixed by Noragen</font>
 				<s>- vertical Online Statustext drawing</s> <font>Fixed by Yury</font>
 			* weathertoolbar
-				- Position Saving
 				- Icons are not shown in Tooltip
 				- Message is not displayed
 				- Fetch Icons from Server, due to ©-Issues, remove static Icon-Files (note: backport to trunk)
 				<s>- is on top (should be displayed at bottom)</s> <font>Fixed by Christian</font>
 				<s>- transparent</s> <font>Fixed by Christian</font>
 				<s>- crashing when move attempt</s> <font>Fixed by Christian</font>
+				<s>- Position Saving</s> <font>Fixed by Christian(I suppose)</font>
 		- HistoryToolbar:
 			- Searchbutton not displayed/messed up
 			- horizontal expanding of the controls does not work.
