--- a/branches/branch-playground/TODO.html
+++ b/branches/branch-playground/TODO.html
@@ -16,9 +16,9 @@ $Id$
 			- Middle-toolbar:
 				- some Buttons are broken on the left (color button)
 				- some controls should be hidden in toolbar as in 0.9.5, show only the needed ones. (Restoration of the Toolbar/Container behavior)
-				- Smilie-Window
-					- is not hiding clicking in container
-					- is opened multiple times if multiple times is clicked on the smilie button
+				<s>- Smilie-Window</s> <font>Fixed by Yury</font>
+					<s>- is not hiding clicking in container</s> <font>Fixed by Yury</font>
+					<s>- is opened multiple times if multiple times is clicked on the smilie button</s> <font>Fixed by Yury</font>
 			- Menu:
 				- on the left is a second "Ignore"-Button without functionality, which should be removed.
 		- in Mainwindow
