--- a/branches/branch-playground/TODO.html
+++ b/branches/branch-playground/TODO.html
@@ -1,4 +1,3 @@
-$Id$
 <html><head></head><body><pre><b><style type="text/css"> s{color:green;} font{color:red} </style>
 
 0.9.6 Todo:
@@ -16,6 +15,7 @@ $Id$
 			- Middle-toolbar:
 				- some Buttons are broken on the left (color button)
 				- some controls should be hidden in toolbar as in 0.9.5, show only the needed ones. (Restoration of the Toolbar/Container behavior)
+				- shrinked toolbar (small container width): the ">>" is shown, but has no function on the right of the toolbar
 				<s>- Smilie-Window</s> <font>Fixed by Yury</font>
 					<s>- is not hiding clicking in container</s> <font>Fixed by Yury</font>
 					<s>- is opened multiple times if multiple times is clicked on the smilie button</s> <font>Fixed by Yury</font>
