* porting issues update

--- a/branches/branch-playground/porting-issues.html
+++ b/branches/branch-playground/porting-issues.html
@@ -75,8 +75,8 @@
 
 - SIGNAL/SLOT - Problems:
 
-	- SIM-IM: 01/07/2009 00:31:26 [DBG] QT: Object::connect: No such signal QHttp::authenticationRequired(QString&,quint16,QAuthenticator*) in branch-playground\sim\fetch.cpp:188
-	- SIM-IM: 01/07/2009 00:31:26 [DBG] QT: Object::connect: No such signal QHttp::sslErrors(const QList<QSslError>&) in branch-playground\sim\fetch.cpp:197
+	<s>- SIM-IM: 01/07/2009 00:31:26 [DBG] QT: Object::connect: No such signal QHttp::authenticationRequired(QString&,quint16,QAuthenticator*) in branch-playground\sim\fetch.cpp:188</s> <font>Occurs if Qt is compiled without -openssl, thx Christian.</font>
+	<s>- SIM-IM: 01/07/2009 00:31:26 [DBG] QT: Object::connect: No such signal QHttp::sslErrors(const QList<QSslError>&) in branch-playground\sim\fetch.cpp:197</s> <font>Occurs if Qt is compiled without -openssl, thx Christian.</font>
 
 	-Click on contact:
 		- SIM-IM: 01/07/2009 00:41:23 [DBG] QT: Object::connect: No such signal MsgEdit::toolBarPositionChanged(QToolBar*) in branch-playground\plugins\_core\userwnd.cpp:81
