--- a/branches/branch-playground/porting-issues.html
+++ b/branches/branch-playground/porting-issues.html
@@ -2,7 +2,7 @@
 
 <a href="http://sim-im.org/wiki/Porting_issues"><h1>Porting issues</h1></a>
 <hr/>
-<a href="http://sim-im.org/wiki/Developing">Sim-IM Developer Area> on Sim-IM.org</a>
+<a href="http://sim-im.org/wiki/Developing">Sim-IM Developer Area</a> on Sim-IM.org
 
 
 TODO list for sim-im 1.0.0:
